--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -191,3 +191,9 @@ a:visited {
 .underline {
     text-decoration: underline;
 }
+
+.near-me-zip {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
