--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -112,8 +112,13 @@ a:visited {
     border: 1px solid red;
 }
 
-.event-detail-header {
+.event-detail-name {
     font-size: var(--font-xl);
+}
+
+.event-details-header {
+    display: flex;
+    justify-content: space-between;
 }
 
 .event-detail-subheader {
@@ -214,4 +219,24 @@ a:visited {
     height: 30px;
     width: 30px;
     border-radius: 50%;
+}
+
+.invited-label,
+.attending-label {
+    display: inline-block;
+    padding: 0.25em 0.5em;
+    color: white;
+    border-radius: 10px;
+}
+
+.invited-label {
+    background-color: dodgerblue;
+}
+.attending-label {
+    background-color: rgb(50, 219, 100);
+}
+
+.invited-user,
+.attending-user {
+    margin-left: 1em;
 }
