--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -173,6 +173,11 @@ a:visited {
     font-family: 'Poppins', sans-serif;
 }
 
+.uploader {
+    display: flex;
+    flex-direction: column;
+}
+
 .btn {
     margin: 0.25em;
     padding: 0.5em 1em;
@@ -182,6 +187,7 @@ a:visited {
     text-transform: uppercase;
     font-weight: 700;
     cursor: pointer;
+    color: white;
 }
 
 .btn-primary {
@@ -247,8 +253,14 @@ a:visited {
 }
 
 .profile-image {
+    display: block;
+    margin: 0 auto;
     height: 200px;
     width: 200px;
+}
+
+.hidden {
+    display: none;
 }
 
 .profile-image-small {
@@ -293,6 +305,9 @@ a:visited {
     text-decoration: underline;
 }
 
+.profile-page-header {
+    border-bottom: 1px solid gray;
+}
 @media (min-width: 600px) {
     :root {
         --font-xl: 1.75rem;
