Fixed a bug when a user logs in and Home page renders before eventsHosting is retrieved git push origin main

--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -340,6 +340,9 @@ a:hover {
     text-decoration: underline;
 }
 
+.centered {
+    margin: 1em auto !important;
+}
 .profile-page-header {
     border-bottom: 1px solid gray;
 }
