Fixed bug with modal - was passing unexpected props down through the Bootstrap modal which was throwing a warning. Destructuring the unwanted function fixed the issue

--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -68,11 +68,11 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    color: var(--style-clr-primary);
+.event-detail-link:hover {
+    color: black;
 }
 
-.link:hover {
+.nav-link:hover {
     color: var(--style-clr-primary);
 }
 
