Added ability to edit Location on EventDetail component

--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -190,6 +190,7 @@ a {
     border: 1px solid gray;
     font-family: 'Poppins', sans-serif;
     border-radius: 8px;
+    width: auto;
 }
 
 .text-input {
