Fixed link styling

--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -76,7 +76,8 @@ a {
     color: var(--style-clr-primary);
 }
 
-.active {
+.active-nav-link,
+.active-nav-link:hover {
     color: var(--style-clr-primary);
 }
 
