--- a/simple-rsvp/src/App.css
+++ b/simple-rsvp/src/App.css
@@ -345,10 +345,25 @@ a {
 .centered {
     margin: 1em auto !important;
 }
+
 .profile-page-header {
     border-bottom: 1px solid gray;
 }
 
+.profile-page-options {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.logout-button-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.logout-button-container > * {
+    width: 50%;
+}
 .primary {
     color: var(--style-clr-primary);
 }
@@ -387,5 +402,18 @@ a {
 
     .text-input {
         padding: 1em;
+    }
+
+    .btn {
+        max-width: 250px;
+    }
+
+    .logout-button-container {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .logout-button-container > * {
+        width: 50%;
     }
 }
